--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="https://www.futuregenstats.com/favicon.jpg" />
+  <link rel="icon" type="image" href="https://www.futuregenstats.com/favicon.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FutureGenStats</title>
 </head>
