--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image" href="https://www.futuregenstats.com/favicon.jpg" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GY4V6ZV2W0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-GY4V6ZV2W0');
+  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FutureGenStats</title>
 </head>
